Add Auhtentication Logins

--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -7,8 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SqlHelper\SqlHelper.csproj" />
     <ProjectReference Include="..\Utilites\Utilites.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Authentication\" />
   </ItemGroup>
 
 </Project>
