--- a/GAMAX.Services/appsettings.json
+++ b/GAMAX.Services/appsettings.json
@@ -5,5 +5,21 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=MAHMOUD-KHALED\\SQLEXPRESS;Database=GamaxDb;User Id=sa;Password=admin;Encrypt=False;"
+  },
+  "MailSettings": {
+    "Email": "mahmoud.gamax.test@outlook.com",
+    "DisplayName": "Gamax verification",
+    "Password": "12345678@Ma",
+    "Host": "smtp-mail.outlook.com",
+    "Port": 587
+  },
+  "JWT": {
+    "Key": "sz8eI7OdHBrjrIo8j9nTW/rQyO1OvY0pAQ2wDKQZw/0=",
+    "Issuer": "SecureApi",
+    "Audience": "SecureApiUser",
+    "DurationInMinutes": 1
+  },
   "AllowedHosts": "*"
 }
