Add Post related stuff NOT TESTED

--- a/GAMAX.Services/appsettings.json
+++ b/GAMAX.Services/appsettings.json
@@ -21,5 +21,8 @@
     "Audience": "SecureApiUser",
     "DurationInMinutes": 10
   },
+  "SharedFolder": {
+    "Path": ""
+  },
   "AllowedHosts": "*"
 }
