--- a/GAMAX.Services/appsettings.json
+++ b/GAMAX.Services/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MAHMOUD-KHALED\\SQLEXPRESS;Database=GamaxDb;User Id=sa;Password=admin;Encrypt=False;"
+    "DefaultConnection": "Server=MAHMOUD-KHALED\\SQLEXPRESS;Database=GamaxDb;User Id=sa;Password=admin;MultipleActiveResultSets=true ;Encrypt=False;"
   },
   "MailSettings": {
     "Email": "mahmoud.gamax.test@outlook.com",
@@ -19,7 +19,7 @@
     "Key": "sz8eI7OdHBrjrIo8j9nTW/rQyO1OvY0pAQ2wDKQZw/0=",
     "Issuer": "SecureApi",
     "Audience": "SecureApiUser",
-    "DurationInMinutes": 10
+    "DurationInMinutes": 150
   },
   "RefreshToken": {
     "DurationInDays": 15
