--- a/GAMAX.Services/appsettings.json
+++ b/GAMAX.Services/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MAHMOUD-KHALED\\SQLEXPRESS;Database=GamaxDb;User Id=sa;Password=admin;MultipleActiveResultSets=true ;Encrypt=False;"
+    "DefaultConnection": "Server=MAHMOUD-KHALED\\SQLEXPRESS;Database=GamaxDb2;User Id=sa;Password=admin;MultipleActiveResultSets=true ;Encrypt=False;"
   },
   "MailSettings": {
     "Email": "mahmoud.gamax.test@outlook.com",
