--- a/GAMAX.Services/appsettings.json
+++ b/GAMAX.Services/appsettings.json
@@ -25,7 +25,14 @@
     "DurationInDays": 15
   },
   "SharedFolder": {
-    "Path": ""
+    "ProfilePhotos": "StaticFiles\\ProfilePhotos",
+    "CoverPhotos": "StaticFiles\\CoverPhotos",
+    "PostPhotos": "StaticFiles\\PostPhotos",
+    "PostVideos": "StaticFiles\\PostVideos",
+    "QuestionVideos": "StaticFiles\\QuestionVideos",
+    "QuestionPhotos": "StaticFiles\\QuestionPhotos",
+    "CommentsPhotos": "StaticFiles\\CommentsPhotos",
+    "CommentsVideos": "StaticFiles\\CommentsVideos"
   },
   "AllowedHosts": "*"
 }
