Add Chat extra feature

--- a/GAMAX.Services/appsettings.json
+++ b/GAMAX.Services/appsettings.json
@@ -32,7 +32,9 @@
     "QuestionVideos": "StaticFiles\\QuestionVideos",
     "QuestionPhotos": "StaticFiles\\QuestionPhotos",
     "CommentsPhotos": "StaticFiles\\CommentsPhotos",
-    "CommentsVideos": "StaticFiles\\CommentsVideos"
+    "CommentsVideos": "StaticFiles\\CommentsVideos",
+    "ChatPhotos": "StaticFiles\\ChatPhotos",
+    "ChatVideos": "StaticFiles\\ChatVideos"
   },
   "AllowedHosts": "*"
 }
