--- a/GAMAX.Services/appsettings.json
+++ b/GAMAX.Services/appsettings.json
@@ -36,5 +36,7 @@
     "ChatPhotos": "StaticFiles\\ChatPhotos",
     "ChatVideos": "StaticFiles\\ChatVideos"
   },
+  "AllowedOrigin": "http://localhost:3000",
+  "BackendUrl": "https://api.gamersverse.gg",
   "AllowedHosts": "*"
 }
