--- a/GAMAX.Services/appsettings.json
+++ b/GAMAX.Services/appsettings.json
@@ -37,6 +37,6 @@
     "ChatVideos": "StaticFiles\\ChatVideos"
   },
   "AllowedOrigin": "http://localhost:3000",
-  "BackendUrl": "https://api.gamersverse.gg",
+  "BackendUrl": "http://localhost:5285",
   "AllowedHosts": "*"
 }
