--- a/GAMAX.Services/appsettings.json
+++ b/GAMAX.Services/appsettings.json
@@ -6,12 +6,12 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MAHMOUD-KHALED\\SQLEXPRESS;Database=GamaxDb5;User Id=sa;Password=admin;MultipleActiveResultSets=true ;Encrypt=False;"
+    "DefaultConnection": "Server=MAHMOUD-KHALED\\SQLEXPRESS;Database=Db5;User Id=0;Password=0;MultipleActiveResultSets=true ;Encrypt=False;"
   },
   "MailSettings": {
-    "Email": "mahmoud.gamax.test@outlook.com",
+    "Email": "@outlook.com",
     "DisplayName": "Gamax verification",
-    "Password": "12345678@Ma",
+    "Password": "---",
     "Host": "smtp-mail.outlook.com",
     "Port": 587
   },
